--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,3 +10,7 @@ button { cursor: pointer; }
 .w-70{
     width: 70% !important;
 }
+
+.table-shadow{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
