--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -14,3 +14,12 @@ button { cursor: pointer; }
 .table-shadow{
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
+
+.icon-hover-lift {
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.icon-hover-lift:hover {
+  transform: scale(1.15) translateY(-3px);
+}
