--- a/backend/app/templates/prace_rozne.html
+++ b/backend/app/templates/prace_rozne.html
@@ -30,7 +30,7 @@
         .logo-section {
             background-color: #4CAF50;
             color: white;
-            padding: 20px;
+            padding: 20px 5px;
             font-size: 2rem;
             font-weight: bold;
             text-align: center;
@@ -90,12 +90,12 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-2">
+            <div class="col-3">
                 <div class="logo-section">
                     GH<br>SERWIS
                 </div>
             </div>
-            <div class="col-10">
+            <div class="col-9">
                 <div class="header-section">
                     <h4 class="mb-3">PRACE RÓŻNE - ZADANIE NR: <span id="task-number">{{ naglowek.ZNAG_Id }}</span></h4>
 
