--- a/backend/app/templates/protokol.html
+++ b/backend/app/templates/protokol.html
@@ -21,7 +21,7 @@
             padding: 10px;
         }
         .top-banner {
-            background-color: #333;
+            background-color: #4bae4f;
             color: white;
             padding: 6px;
             text-align: center;
